# B4M36ESW

06_serialization/: README.md  pom.xml
06_serialization/not.git/: config  index  packed-refs
06_serialization/src/main/cpp/: CMakeLists.txt  cpx.hh  dataset.cpp  dataset.h  datatype.h  jsonserializable.h  main.cpp  measurementinfo.cpp  measurements.pb.cc  measurements.pb.h  result.h
_bruteClone/: 01ellipses_28_jirajak2.tgz  02bench_19_jirajak2.tgz  03epoll_s_15_jirajak2.tgz  04rcu_49_jirajak2.tgz  05mosp_10_jirajak2.tgz  06serial_jirajak2_olysarad.tgz  07nonblock_19_jirajak2.tgz  08server_c_40_jirajak2.tgz  08server_j_40_jirajak2.tgz  README.md
benchmarking/: matrix_multiplication_benchmark_20220305_092104.json  matrix_multiplication_benchmark_20220305_113405.json  matrix_multiplication_benchmark_20220305_114206.json  matrix_multiplication_benchmark_20220607_160153.json
benchmarking/definetly_not_.git/: config  index  packed-refs
benchmarking_final/: pom.xml
ellipses/: ellipse.diff.txt
ellipses/ellipse/: CMakeLists.txt  Makefile  ellipse.cpp  ellipse.h  find_ellipse.cpp  imgproc.cpp  imgproc.h  shell.nix  table3x3.hpp
ellipses/generator/: gen3x3table.cpp
ellipses/not.git/: FETCH_HEAD  config  index  packed-refs
epoll-in-c/: .gitignore  README  meson.build  test.txt
epoll-in-c/incl/: ds.h
epoll-in-c/not.git/: config  index  packed-refs
epoll-in-c/src/: main.c
epoll-in-c/update/: build.ninja  compile_commands.json
epoll_server/: CMakeLists.txt  LICENSE  epollfd.cpp  epollfd.h  epollinstance.cpp  epollinstance.h  epollstdin.cpp  epollstdin.h  epolltimer.cpp  epolltimer.h  main.cpp  t.sh
epoll_server/not.git/: config  index  packed-refs
hw4_readCopyUpdate/rcu/: Makefile  definitions.hpp  list.cpp  list.hpp  list_mutex  list_rcu  list_rwlock  main.cpp
multiobjective_shortest_path/: .txt  mosp.diff.txt  myrecording.jfr  pom.xml
multiobjective_shortest_path/not.git/: FETCH_HEAD  config  index  packed-refs
nonblock-set/: pom.xml
nonblock-set/not.git/: config  index  packed-refs
nonblock-set/results/: index.html  (+3 more)
serialization/: pom.xml
serialization/not.git/: config  index
serialization/src/main/cpp/: CMakeLists.txt  main.cpp  measurementinfo.h  result.cpp
(+108 files in other folders)
